--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,8 @@
     android:id="@+id/loginSignup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:backgroundTint="@color/fondo"
     tools:context=".LoginActivity">
 
     <Button
@@ -88,5 +90,27 @@
         app:layout_constraintStart_toStartOf="@+id/loginSignin"
         app:layout_constraintTop_toBottomOf="@+id/loginSignin"
         app:layout_constraintVertical_bias="0.036" />
+
+    <Button
+        android:id="@+id/bt_back_inicio"
+        android:layout_width="215dp"
+        android:layout_height="41dp"
+        android:gravity="center_horizontal"
+        android:text="@string/volver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginSignin"
+        app:layout_constraintVertical_bias="0.949" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="97dp"
+        android:layout_height="91dp"
+        app:layout_constraintBottom_toTopOf="@+id/loginUser"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icono" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
