--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:backgroundTint="@color/fondo"
     tools:context=".MainActivity">
 
     <Button
@@ -36,6 +38,7 @@
         android:layout_marginTop="256dp"
         android:text="¿Cómo desea acceder a la aplicación?"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btDocente"
         app:layout_constraintEnd_toEndOf="parent"
