--- a/app/src/main/res/layout/activity_recovery.xml
+++ b/app/src/main/res/layout/activity_recovery.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:backgroundTint="@color/fondo"
     tools:context=".RecoveryActivity">
 
     <EditText
@@ -27,6 +29,7 @@
         android:layout_marginTop="232dp"
         android:text="@string/recuperar_pass"
         android:textAlignment="center"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +40,8 @@
         android:layout_width="130dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:text="@string/recuperar"
         android:onClick="recoverPass"
+        android:text="@string/recuperar"
         app:layout_constraintEnd_toEndOf="@+id/edt_recoverMail"
         app:layout_constraintStart_toStartOf="@+id/edt_recoverMail"
         app:layout_constraintTop_toBottomOf="@+id/edt_recoverMail" />
