--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment" >
+    android:background="#FFFFFF"
+    android:backgroundTint="@color/fondo"
+    tools:context=".ui.home.HomeFragment">
 
     <LinearLayout
         android:layout_width="418dp"
-        android:layout_height="583dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/fondo"
         android:orientation="vertical"
+        android:paddingTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.049">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardClases"
@@ -40,7 +45,7 @@
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:drawableTopCompat="@drawable/ic_launcher_foreground" />
+                    app:drawableTopCompat="@drawable/education_computer_school_graduate" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -56,11 +61,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="132dp"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="384dp"
+                    android:layout_width="360dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/ranking_alumnos"
@@ -68,8 +73,40 @@
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    app:drawableTopCompat="@drawable/ic_launcher_foreground" />
+                    app:drawableTopCompat="@drawable/iconrank" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardAyuda"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="6dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="360dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/ayuda"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:drawableTopCompat="@drawable/education_book_learn_learning_icon_149694" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
