--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -4,18 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="2dp">
+    android:layout_marginStart="2dp"
+    android:backgroundTint="@color/fondo"
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="38dp">
+        android:layout_height="38dp"
+        android:backgroundTint="@color/fondo">
 
         <TextView
             android:id="@+id/txt_rankingNombre"
             android:layout_width="238dp"
             android:layout_height="30dp"
             android:layout_marginStart="4dp"
+            android:backgroundTint="@color/fondo"
             android:text="TextView"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +29,9 @@
             android:id="@+id/txt_rankingPuntos"
             android:layout_width="58dp"
             android:layout_height="27dp"
+            android:backgroundTint="@color/fondo"
             android:text="TextView"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_rankingNombre"
