--- a/app/src/main/res/layout/sp_clases.xml
+++ b/app/src/main/res/layout/sp_clases.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:backgroundTint="@color/fondo"
     android:gravity="center"
     android:text=""
     android:textColor="@color/black"
