--- a/app/src/main/res/layout/activity_alumno_tab.xml
+++ b/app/src/main/res/layout/activity_alumno_tab.xml
@@ -27,7 +27,9 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimary"
+            app:tabIndicatorColor="#AEF160"
+            app:tabSelectedTextColor="#FFFDFD" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
