--- a/app/src/main/res/layout/fragment_rewards.xml
+++ b/app/src/main/res/layout/fragment_rewards.xml
@@ -5,11 +5,4 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:backgroundTint="@color/fondo"
-    tools:context=".ui.help.AyudaFragment" >
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AQUI VA LA AYUDA" />
-</FrameLayout>
+    tools:context=".ui.rewards.RewardsFragment"/>
