--- a/app/src/main/res/layout/item_rv_alumno.xml
+++ b/app/src/main/res/layout/item_rv_alumno.xml
@@ -5,7 +5,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
-    android:paddingTop="5dp">
+    android:backgroundTint="#E8EDE2"
+    android:paddingTop="5dp"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
