--- a/app/src/main/res/layout/item_rv_misclases.xml
+++ b/app/src/main/res/layout/item_rv_misclases.xml
@@ -7,6 +7,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="10dp"
+    android:backgroundTint="#E8EDE2"
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp">
 
@@ -14,13 +15,15 @@
         android:id="@+id/linearLayout2"
         android:layout_width="389dp"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:backgroundTint="#E8EDE2">
 
         <TextView
             android:id="@+id/txt_clase"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginStart="4dp"
+            android:backgroundTint="#E8EDE2"
             android:gravity="center"
             android:text="Clase"
             android:textColor="@color/black"
@@ -36,6 +39,7 @@
             android:layout_width="32dp"
             android:layout_height="34dp"
             android:layout_marginEnd="76dp"
+            android:backgroundTint="#E8EDE2"
             app:layout_constraintBottom_toBottomOf="@+id/txt_clase"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txt_clase"
