--- a/app/src/main/res/layout/activity_recovery.xml
+++ b/app/src/main/res/layout/activity_recovery.xml
@@ -26,14 +26,14 @@
         android:id="@+id/txt_recoverMsg"
         android:layout_width="330dp"
         android:layout_height="24dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="116dp"
         android:text="@string/recuperar_pass"
         android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/bt_recover"
@@ -45,4 +45,30 @@
         app:layout_constraintEnd_toEndOf="@+id/edt_recoverMail"
         app:layout_constraintStart_toStartOf="@+id/edt_recoverMail"
         app:layout_constraintTop_toBottomOf="@+id/edt_recoverMail" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icono2"
+        android:contentDescription="@string/todo" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="57dp"
+        android:layout_height="41dp"
+        android:backgroundTint="@color/color1"
+        android:contentDescription="@string/todo"
+        android:onClick="backToLogin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_recover"
+        app:layout_constraintVertical_bias="0.023"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
