--- a/app/src/main/res/layout/activity_add_clase.xml
+++ b/app/src/main/res/layout/activity_add_clase.xml
@@ -12,42 +12,44 @@
         android:id="@+id/bt_volver2"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
-        android:text="VOLVER"
+        android:text="@string/volver"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintStart_toStartOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <EditText
         android:id="@+id/edt_clasenombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_width="252dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="76dp"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="@string/nombre"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/edt_curso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="252dp"
+        android:layout_height="43dp"
         android:layout_marginTop="4dp"
         android:ems="10"
-        android:hint="Curso"
+        android:hint="@string/curso_primero_segundo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_clasenombre" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_clasenombre"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AÑADIR CLASE"
+        android:text="@string/a_adir_clase"
         app:layout_constraintEnd_toEndOf="@+id/edt_curso"
         app:layout_constraintStart_toStartOf="@+id/edt_curso"
         app:layout_constraintTop_toBottomOf="@+id/edt_curso" />
@@ -65,4 +67,15 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_volver2" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icono2"
+        android:contentDescription="@string/todo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
