--- a/app/src/main/res/layout/activity_done.xml
+++ b/app/src/main/res/layout/activity_done.xml
@@ -12,24 +12,34 @@
         android:id="@+id/txt_message"
         android:layout_width="371dp"
         android:layout_height="86dp"
-        android:layout_marginTop="160dp"
-        android:text="TextView"
+        android:layout_marginTop="52dp"
+        android:text="@string/textview"
         android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/bt_backLogin"
         android:layout_width="171dp"
         android:layout_height="40dp"
         android:onClick="goLogin"
-        android:text="volver a login"
+        android:text="@string/volver_a_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_message"
         app:layout_constraintVertical_bias="0.067" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icono2"
+        android:contentDescription="@string/todo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
