--- a/app/src/main/res/layout/activity_load_splash.xml
+++ b/app/src/main/res/layout/activity_load_splash.xml
@@ -11,12 +11,12 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/loadsplashimg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.355"
-        app:srcCompat="@drawable/icono"
-        android:contentDescription="@string/loadsplashimg" />
+        app:srcCompat="@drawable/icono1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
