--- a/app/src/main/res/layout/fragment_alumnos.xml
+++ b/app/src/main/res/layout/fragment_alumnos.xml
@@ -28,7 +28,7 @@
         android:layout_width="225dp"
         android:layout_height="41dp"
         android:layout_marginBottom="28dp"
-        android:text="AÑADIR ALUMNO"
+        android:text="@string/a_adir_alumno"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
