--- a/app/src/main/res/layout/fragment_clases.xml
+++ b/app/src/main/res/layout/fragment_clases.xml
@@ -29,7 +29,7 @@
         android:layout_width="225dp"
         android:layout_height="41dp"
         android:layout_marginBottom="28dp"
-        android:text="AÑADIR CLASE"
+        android:text="@string/a_adir_clase"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
