--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -19,7 +19,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="4dp"
             android:backgroundTint="@color/fondo"
-            android:text="TextView"
+            android:text="@string/textview"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
             android:layout_width="58dp"
             android:layout_height="27dp"
             android:backgroundTint="@color/fondo"
-            android:text="TextView"
+            android:text="@string/textview"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
