--- a/app/src/main/res/layout/item_rv_alumno.xml
+++ b/app/src/main/res/layout/item_rv_alumno.xml
@@ -25,24 +25,27 @@
             android:id="@+id/txt_nombreA"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Nombre"
+            android:hint="@string/nombre"
             android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/txt_apellidosA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Apellidos"
+            android:hint="@string/apellidos1"
             android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/txt_apellidosA2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Apellido2"
+            android:hint="@string/apellido2"
             android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textColor="@color/black" />
 
         <LinearLayout
@@ -55,7 +58,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Puntos:"
+                android:text="@string/puntos"
                 android:textColor="@color/black" />
 
             <TextView
@@ -63,8 +66,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:hint="puntos"
+                android:hint="@string/puntos1"
                 android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:textColor="@color/black" />
         </LinearLayout>
 
@@ -78,14 +82,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/arrow_up_float" />
+                app:srcCompat="@android:drawable/arrow_up_float"
+                android:contentDescription="@string/todo" />
 
             <ImageView
                 android:id="@+id/bt_removePoints"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/arrow_down_float" />
+                app:srcCompat="@android:drawable/arrow_down_float"
+                android:contentDescription="@string/todo" />
         </LinearLayout>
 
     </LinearLayout>
